# MyFirstGame

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: build.yaml  build.yml  release_draft.yaml
src/: calculate.c  calculate.h  console.c  console.h  entity.c  entity.h  game.c  game.h  levels.h  main.c
src/level/: level_1.c  level_1.h  level_2.c  level_2.h  level_3.c  level_3.h
